# steward

./: .clippy.toml  .gitattributes  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  askama.toml
.github/workflows/: ci.yml
config/: steward.toml
config/UserData/Config/: dedicated_cfg.txt
config/UserData/Maps/: A01.Map.Gbx  U-Turn.Map.Gbx
config/UserData/Maps/MatchSettings/: maplist.txt  recent.txt
docker/: .env  README.md  docker-compose.yml
docker/controller/: .env  Dockerfile  updater.sh
docker/dedicated/: Dockerfile  updater.sh
gbx/: Cargo.toml  README.md
gbx/src/: client.rs  file.rs  lib.rs
gbx/src/adapter/: callbacks.rs  calls.rs  mod.rs
gbx/src/api/: callbacks.rs  calls.rs  mod.rs  structs.rs
gbx/src/xml/: from_string.rs  from_value.rs  mod.rs  to_string.rs  to_value.rs  validation_replay_base64
src/: action.rs  command.rs  compat.rs  config.rs  constants.rs  event.rs  ingame.rs  lib.rs  main.rs  message.rs  server.rs  startup.rs
src/chat/: mod.rs
src/chat/command/: from_admin.rs  from_player.rs  from_super_admin.rs  mod.rs  response.rs
src/chat/command/output/: confirm.rs  error.rs  mod.rs  result.rs
src/chat/message/: mod.rs  to_player.rs  to_server.rs
src/controller/: chat.rs  compat.rs  config.rs  facade.rs  mod.rs  player.rs  playlist.rs  preference.rs  queue.rs  race.rs  record.rs  schedule.rs  server_rank.rs  settings.rs  widget.rs
src/controller/facade/: mod.rs  on_action.rs  on_command.rs  on_config_change.rs  on_controller_event.rs  on_server_event.rs
src/database/: mock.rs  mod.rs  postgres.rs  queries.rs  structs.rs
src/database/api/: map.rs  mod.rs  player.rs  record.rs  timeattack.rs
src/database/postgres/: map.rs  mod.rs  player.rs  record.rs  timeattack.rs
src/database/postgres/migrations/: 1.sql
src/network/: exchange.rs  github.rs  mod.rs
src/res/: UiProperties.xml
src/res/migrations/: 0.sql  1.sql
src/res/widgets/: base_dynamic.j2  base_menu.j2  base_static.j2  empty.j2  intro.j2  lib_time_diff.j2  lib_time_to_text.j2  menu.j2  menu_map_ranking.j2  menu_playlist.j2  menu_schedule.j2  menu_server_ranking.j2  outro.j2  outro_map_rankings.j2  outro_queue.j2  outro_queue_vote.j2  outro_server_ranking.j2  outro_server_ranking_placeholder.j2  popup.j2  race_live_ranks.j2  race_run_outro.j2  race_sector_diff.j2  race_toggle_menu.j2
src/server/: mock.rs  mod.rs
src/widget/: action.rs  filters.rs  formatters.rs  intro.rs  menu.rs  menu_map_ranking.rs  menu_playlist.rs  menu_schedule.rs  menu_server_ranking.rs  mod.rs  outro.rs  outro_map_rankings.rs  outro_queue.rs  outro_server_ranking.rs  popup.rs  race_live_ranks.rs  race_run_outro.rs  race_sector_diff.rs  race_toggle_menu.rs  ser.rs
src/widget/common/: base.xml  mod.rs  popup.rs  popup.xml  root.xml
src/widget/include/: TimeUtils.Script.txt
src/widget/timeattack/: hud.rs  hud.xml  menu.rs  menu.xml  menu_map_ranking.rs  menu_map_ranking.xml  menu_playlist.rs  menu_playlist.xml  menu_schedule.rs  menu_schedule.xml  menu_server_ranking.rs  menu_server_ranking.xml  mod.rs  outro.rs  outro.xml  outro_queue.rs  outro_queue.xml  outro_server_ranking.rs  outro_server_ranking.xml  race_live_ranks.rs  race_live_ranks.xml  race_run_outro.rs  race_run_outro.xml
tests/integration/: main.rs
