[package]
name    = "steward"
version = "0.1.0-alpha2"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]

[dependencies]
anyhow = "1.0"
async-recursion = "0.3"
async-trait = "0.1"
bb8 = "0.4"
bb8-postgres = "0.4"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
gbx = { path = "gbx" }
include_dir = "0.6"
indexmap = "1.3"
lazy_static = "1.4"
log = "0.4"
postgres-types = { version = "0.1", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
semver = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tera = { version = "1", default-features = false }
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "rt-util", "sync", "time"] }
tokio-postgres = "0.5"
toml = "0.5"

[dev-dependencies]
testcontainers = "0.9"

[features]
# The reason we do this is because integration tests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/45599
test = []
