[package]
name    = "steward"
version = "0.1.0-alpha5"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]

[dependencies]
anyhow = "1.0"
async-recursion = "0.3"
async-trait = "0.1"
bb8 = "0.4"
bb8-postgres = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
gbx = { path = "gbx" }
include_dir = "0.6"
indexmap = "1.3"
lazy_static = "1.4"
log = "0.4"
postgres-types = { version = "0.1", features = ["derive"] }
reqwest = { version = "0.10" }
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tera = { version = "1", default-features = false }
testcontainers = { version = "0.11", optional = true }
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
toml = "0.5"

[features]
default = []
integration_test = ["testcontainers"]
unit_test = ["gbx/unit_test"]
