[package]
name    = "gbx"
version = "0.1.0-alpha2"

edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.12"
byteorder = "1"
log = "0.4"
quick-xml = { version = "0.18" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "time"] }
